# slune

./: .gitignore  CLASSDESIGN.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: docs.yml  multi_os.yml  publish.yml  python-package.yml  tests.yaml  tests_macos.yml  tests_ubuntu.yml  tests_windows.yml
docs/.html/: search.js  src.html
docs/.html/src/: slune.html
examples/From_README/: regularized_linear_regression.ipynb
examples/tutorials/: combining_searcher_saver_logger.md  logger_default.md  saver_csv.md  searcher_grid.md
integration/: test_integration_flow.py
slune/: __init__.py  base.py  loggers.py  savers.py  searchers.py  slune.py  utils.py
src/: __init__.py
src/slune/: __init__.py  base.py  slune.py  utils.py
src/slune/loggers/: __init__.py  default.py
src/slune/savers/: __init__.py  csv.py  ext.py
templates/: cpu_template.sh  gpu_template.sh
tests/: __init__.py  test_integration_full_workflow_depth.py  test_integration_grid_csv_depth.py  test_integration_grid_ext_depth.py  test_loggers.py  test_loggers_default.py  test_loggers_default_more.py  test_savers.py  test_savers_csv.py  test_savers_csv_exists_depth.py  test_savers_csv_read_depth.py  test_savers_ext_exists_depth.py  test_savers_ext_more.py  test_savers_save_depth.py  test_searchers.py  test_searchers_grid.py  test_searchers_grid_check_existing.py  test_searchers_grid_next_tune_depth.py  test_searchers_grid_skip_existing.py  test_slune.py  test_utils.py  test_utils_get_all_paths_depth.py  test_utils_more.py
(+11 files in other folders)
